Add tests for the CDP uri locator